<resources>
    <string name="app_name">PRUEBAS PROYECTO</string>
    <string name="mele_gana">MELEE GANADA</string>
    <string name="mele_pierde">MELEE PERDIDA</string>
    <string name="tocuh_gana">TOUCH GANADA</string>
    <string name="tocuh_pierde">TOUCH PERDIDA</string>
    <string name="golpes">GOLPES</string>
    <string name="amarilla">TARJETAS AMARILLAS</string>
    <string name="roja">TARJETAS ROJAS</string>


</resources>
